Edited the project section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 A CS undergrad on a mission to learn cool stuff, build awesome things, and vibe with curious minds. Let's connect!
             </p>
             <div class="hero-buttons">
-                <a href="#contact" class="btn btn-primary">CONTACT ME</a> <a href="https://www.linkedin.com/in/esanki-thambawita-350947256/" target="_blank" class="social-icon">
+                <a href="#contact" class="btn btn-primary">CONTACT ME</a>
+                <a href="https://www.linkedin.com/in/esanki-thambawita-350947256/" target="_blank" class="social-icon">
                     <img src="images/linkedin-hero.png" alt="LinkedIn">
                 </a>
                 <a href="https://github.com/EsankiThambawita" target="_blank" class="social-icon">
@@ -57,25 +58,25 @@
             <div class="project-slider-track">
                 <div class="project-card">
                     <div class="project-visual">
-                        <span class="conceptual-label">Conceptual Work</span>
-                        <img src="images/project-img.png" alt="Adventure Time Project" class="project-image-preview">
+                        <span class="conceptual-label">Mobile Application</span>
+                        <img src="images/madball.jpg" alt="madball" class="project-image-preview" style="max-height: 250px; object-fit: contain;">
                     </div>
                     <div class="project-details">
-                        <h3 class="project-title">Promotional landing page for our favorite show</h3>
+                        <h3 class="project-title">MadBall: Local Multiplayer 2D Mobile Game</h3>
                         <p class="project-description">
-                            Teamed up with a designer to breathe life into a promotional webpage for our beloved show, Adventure Time. Delivered a fully responsive design with dynamic content capabilities, seamlessly integrating a newsletter feature to keep fans updated with the latest adventures.
+                            MadBall is a 2D paddle-and-ball mobile game that offers both single-player mode—with AI opponents across three difficulty levels—and a local two-player mode on the same device. Developed using Flutter for UI/UX and menus, and Unity for gameplay and physics, the game features dynamic maps with environmental effects, realistic ball physics, and immersive sound design.
                         </p>
                         <div class="project-meta">
                             <div class="meta-item">
-                                <strong>Year</strong><span>2023</span>
+                                <strong>Year</strong><span>2025</span>
                             </div>
                             <div class="meta-item">
-                                <strong>Role</strong><span>Front-end Developer</span>
+                                <strong>Role</strong><span>Group Leader</span>
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
-                            <a href="#" class="btn-text github">
+                            <a href="https://shorturl.at/Q7G2M" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://github.com/EsankiThambawita/MadBall" class="btn-text github">
                                 SEE ON GITHUB <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -85,50 +86,24 @@
                 <div class="project-card">
                     <div class="project-visual">
                         <span class="conceptual-label">Web Application</span>
-                        <img src="images/project-img.png" alt="Another Project" class="project-image-preview">
+                        <img src="images/primebid.png" alt="primebid" class="project-image-preview">
                     </div>
                     <div class="project-details">
-                        <h3 class="project-title">E-commerce Platform Redesign</h3>
+                        <h3 class="project-title">Prime Bid: A Modern Online Auction Platform</h3>
                         <p class="project-description">
-                            Revamped an existing e-commerce site with a focus on user experience and modern design. Implemented new features like a robust search, dynamic product filtering, and a streamlined checkout process.
+                            Prime Bid is a cutting-edge online platform that connects buyers and sellers, providing a secure and intuitive environment for managing auctions. The system enables users to list items, place bids, and track auction progress effortlessly, while offering a dedicated admin panel equipped with robust tools for overseeing auctions and user activities.
                         </p>
                         <div class="project-meta">
                             <div class="meta-item">
                                 <strong>Year</strong><span>2024</span>
                             </div>
                             <div class="meta-item">
-                                <strong>Role</strong><span>Full-stack Developer</span>
+                                <strong>Role</strong><span>Group Leader</span>
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
-                            <a href="#" class="btn-text github">
-                                SEE ON GITHUB <i class="fab fa-github"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-visual">
-                        <span class="conceptual-label">Mobile App</span>
-                        <img src="images/project-img.png" alt="Mobile App Project" class="project-image-preview">
-                    </div>
-                    <div class="project-details">
-                        <h3 class="project-title">Fitness Tracker Mobile App</h3>
-                        <p class="project-description">
-                            Developed a cross-platform mobile application for tracking fitness activities, setting goals, and visualizing progress. Features include customizable workout plans and integration with wearable devices.
-                        </p>
-                        <div class="project-meta">
-                            <div class="meta-item">
-                                <strong>Year</strong><span>2024</span>
-                            </div>
-                            <div class="meta-item">
-                                <strong>Role</strong><span>Mobile Developer</span>
-                            </div>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
-                            <a href="#" class="btn-text github">
+                            <a href="https://shorturl.at/SCIvW" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://github.com/EsankiThambawita/PrimeBidV2" class="btn-text github">
                                 SEE ON GITHUB <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -137,30 +112,58 @@
 
                 <div class="project-card">
                     <div class="project-visual">
-                        <span class="conceptual-label">Data Science</span>
-                        <img src="images/project-img.png" alt="Data Science Project" class="project-image-preview">
+                        <span class="conceptual-label">Web Application</span>
+                        <img src="images/workconnect.png" alt="workconnect" class="project-image-preview">
                     </div>
                     <div class="project-details">
-                        <h3 class="project-title">Predictive Analytics Dashboard</h3>
+                        <h3 class="project-title">Work-Connect : Distribute Job Portal</h3>
                         <p class="project-description">
-                            Built a data visualization and predictive analytics dashboard using Python and Flask. The dashboard analyzes sales data to forecast future trends and identify key performance indicators.
+                            Work Connect is a comprehensive job-matching platform developed as part of the Software Fundamentals module. Built with a focus on security, scalability, and usability, it facilitates seamless interactions between job seekers, employers, and administrators while ensuring data integrity and efficient system management.
                         </p>
                         <div class="project-meta">
                             <div class="meta-item">
-                                <strong>Year</strong><span>2023</span>
+                                <strong>Year</strong><span>2024</span>
                             </div>
                             <div class="meta-item">
-                                <strong>Role</strong><span>Data Scientist</span>
+                                <strong>Role</strong><span>Collaborator</span>
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
-                            <a href="#" class="btn-text github">
+                            <a href="https://shorturl.at/7h5R1" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://github.com/EsankiThambawita/Work-Connect" class="btn-text github">
                                 SEE ON GITHUB <i class="fab fa-github"></i>
                             </a>
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-visual">
+                        <span class="conceptual-label">Web Application</span>
+                        <img src="images/emart.png" alt="emart" class="project-image-preview">
+                    </div>
+                    <div class="project-details">
+                        <h3 class="project-title">E-Mart: A Secure and Dynamic E-Commerce Platform</h3>
+                        <p class="project-description">
+                            E-Mart is a feature-packed e-commerce platform built as part of the Development of Enterprise Applications module. Designed with scalability, security, and user experience in mind, E-Mart empowers users with a seamless shopping experience while providing administrators with advanced tools to manage the platform effectively.
+                        </p>
+                        <div class="project-meta">
+                            <div class="meta-item">
+                                <strong>Year</strong><span>2024</span>
+                            </div>
+                            <div class="meta-item">
+                                <strong>Role</strong><span>Group Leader</span>
+                            </div>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://shorturl.at/cE8qu" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://github.com/EsankiThambawita/E-Mart" class="btn-text github">
+                                SEE ON GITHUB <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <button class="slider-arrow right-arrow">
@@ -169,7 +172,7 @@
         </div>
     </section>
 
-    </section> <div class="section-divider"></div>
+    <div class="section-divider"></div>
 
     <section class="tech-stack-section">
         <h2 class="section-title">Tech Stack & Tools</h2>
@@ -245,7 +248,7 @@
         </div>
     </section>
 
-    </section> <div class="section-divider"></div>
+    <div class="section-divider"></div>
 
     <section class="about-me-section">
         <h2 class="about-title">About Me</h2>
@@ -253,7 +256,8 @@
             <p class="about-intro">
                 I’m a full stack development enthusiast and a 3rd-year Computer Science student at NSBM Green University with a GPA of 3.9. I learn by building, constantly exploring new technologies through hands-on projects and deep dives into code.
             </p>
-            <div class="about-more-content"> <p>
+            <div class="about-more-content">
+                <p>
                     In 2024, I interned at Tecxick Software Solutions where I worked on two client projects that strengthened my technical skills and boosted my confidence in real-world collaboration.
                 </p>
                 <p>
@@ -264,7 +268,7 @@
         </div>
     </section>
 
-    </section> <div class="section-divider"></div>
+    <div class="section-divider"></div>
 
     <section class="connect-section" id="contact">
         <div class="connect-info-container">
@@ -275,7 +279,7 @@
             <p class="connect-description">
                 For more info, here's my <a href="#" class="resume-link">resume</a>
             </p>
-             <div class="connect-social-icons">
+            <div class="connect-social-icons">
                 <a href="https://www.linkedin.com/in/esanki-thambawita-350947256/" target="_blank" class="social-icon-link">
                     <img src="https://skillicons.dev/icons?i=linkedin" alt="LinkedIn" class="social-icon-img">
                 </a>
