--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav class="navbar">
         <div class="logo">ESANKI THAMBAWITA</div>
         <ul class="nav-links">
-            <li><a href="#">Work</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#projects">Work</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -43,7 +43,7 @@
 
     <div class="section-divider"></div>
 
-    <section class="projects-section">
+    <section class="projects-section" id="projects">
         <div class="section-header">
             <h2 class="section-title">FEATURED PROJECTS</h2>
             <p class="section-description">
@@ -250,7 +250,7 @@
 
     <div class="section-divider"></div>
 
-    <section class="about-me-section">
+    <section class="about-me-section" id="about">
         <h2 class="about-title">About Me</h2>
         <div class="about-content">
             <p class="about-intro">
