Reduced gaps between sections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">ESANKI THAMBAWITA</div>
@@ -22,7 +24,8 @@
         <div class="hero-content">
             <h1 class="hero-title">HI, I AM ESANKI THAMBAWITA.</h1>
             <p class="hero-description">
-                A CS undergrad on a mission to learn cool stuff, build awesome things, and vibe with curious minds. Let's connect!
+                A CS undergrad on a mission to learn cool stuff, build awesome things, and vibe with curious minds.
+                Let's connect!
             </p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">CONTACT ME</a>
@@ -59,12 +62,17 @@
                 <div class="project-card">
                     <div class="project-visual">
                         <span class="conceptual-label">Mobile Application</span>
-                        <img src="images/madball.jpg" alt="madball" class="project-image-preview" style="max-height: 250px; object-fit: contain;">
+                        <img src="images/madball.jpg" alt="madball" class="project-image-preview"
+                            style="max-height: 250px; object-fit: contain;">
                     </div>
                     <div class="project-details">
                         <h3 class="project-title">MadBall: Local Multiplayer 2D Mobile Game</h3>
                         <p class="project-description">
-                            MadBall is a 2D paddle-and-ball mobile game that offers both single-player mode—with AI opponents across three difficulty levels—and a local two-player mode on the same device. Developed using Flutter for UI/UX and menus, and Unity for gameplay and physics, the game features dynamic maps with environmental effects, realistic ball physics, and immersive sound design.
+                            MadBall is a 2D paddle-and-ball mobile game that offers both single-player mode—with AI
+                            opponents across three difficulty levels—and a local two-player mode on the same device.
+                            Developed using Flutter for UI/UX and menus, and Unity for gameplay and physics, the game
+                            features dynamic maps with environmental effects, realistic ball physics, and immersive
+                            sound design.
                         </p>
                         <div class="project-meta">
                             <div class="meta-item">
@@ -75,7 +83,8 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="https://shorturl.at/Q7G2M" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://shorturl.at/Q7G2M" class="btn-text documentation">DOCUMENTATION
+                                &#x2197;</a>
                             <a href="https://github.com/EsankiThambawita/MadBall" class="btn-text github">
                                 SEE ON GITHUB <i class="fab fa-github"></i>
                             </a>
@@ -91,7 +100,10 @@
                     <div class="project-details">
                         <h3 class="project-title">Prime Bid: A Modern Online Auction Platform</h3>
                         <p class="project-description">
-                            Prime Bid is a cutting-edge online platform that connects buyers and sellers, providing a secure and intuitive environment for managing auctions. The system enables users to list items, place bids, and track auction progress effortlessly, while offering a dedicated admin panel equipped with robust tools for overseeing auctions and user activities.
+                            Prime Bid is a cutting-edge online platform that connects buyers and sellers, providing a
+                            secure and intuitive environment for managing auctions. The system enables users to list
+                            items, place bids, and track auction progress effortlessly, while offering a dedicated admin
+                            panel equipped with robust tools for overseeing auctions and user activities.
                         </p>
                         <div class="project-meta">
                             <div class="meta-item">
@@ -102,7 +114,8 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="https://shorturl.at/SCIvW" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://shorturl.at/SCIvW" class="btn-text documentation">DOCUMENTATION
+                                &#x2197;</a>
                             <a href="https://github.com/EsankiThambawita/PrimeBidV2" class="btn-text github">
                                 SEE ON GITHUB <i class="fab fa-github"></i>
                             </a>
@@ -118,7 +131,10 @@
                     <div class="project-details">
                         <h3 class="project-title">Work-Connect : Distribute Job Portal</h3>
                         <p class="project-description">
-                            Work Connect is a comprehensive job-matching platform developed as part of the Software Fundamentals module. Built with a focus on security, scalability, and usability, it facilitates seamless interactions between job seekers, employers, and administrators while ensuring data integrity and efficient system management.
+                            Work Connect is a comprehensive job-matching platform developed as part of the Software
+                            Fundamentals module. Built with a focus on security, scalability, and usability, it
+                            facilitates seamless interactions between job seekers, employers, and administrators while
+                            ensuring data integrity and efficient system management.
                         </p>
                         <div class="project-meta">
                             <div class="meta-item">
@@ -129,7 +145,8 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="https://shorturl.at/7h5R1" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://shorturl.at/7h5R1" class="btn-text documentation">DOCUMENTATION
+                                &#x2197;</a>
                             <a href="https://github.com/EsankiThambawita/Work-Connect" class="btn-text github">
                                 SEE ON GITHUB <i class="fab fa-github"></i>
                             </a>
@@ -145,7 +162,10 @@
                     <div class="project-details">
                         <h3 class="project-title">E-Mart: A Secure and Dynamic E-Commerce Platform</h3>
                         <p class="project-description">
-                            E-Mart is a feature-packed e-commerce platform built as part of the Development of Enterprise Applications module. Designed with scalability, security, and user experience in mind, E-Mart empowers users with a seamless shopping experience while providing administrators with advanced tools to manage the platform effectively.
+                            E-Mart is a feature-packed e-commerce platform built as part of the Development of
+                            Enterprise Applications module. Designed with scalability, security, and user experience in
+                            mind, E-Mart empowers users with a seamless shopping experience while providing
+                            administrators with advanced tools to manage the platform effectively.
                         </p>
                         <div class="project-meta">
                             <div class="meta-item">
@@ -156,7 +176,8 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="https://shorturl.at/cE8qu" class="btn-text documentation">DOCUMENTATION &#x2197;</a>
+                            <a href="https://shorturl.at/cE8qu" class="btn-text documentation">DOCUMENTATION
+                                &#x2197;</a>
                             <a href="https://github.com/EsankiThambawita/E-Mart" class="btn-text github">
                                 SEE ON GITHUB <i class="fab fa-github"></i>
                             </a>
@@ -254,14 +275,18 @@
         <h2 class="about-title">About Me</h2>
         <div class="about-content">
             <p class="about-intro">
-                I’m a full stack development enthusiast and a 3rd-year Computer Science student at NSBM Green University with a GPA of 3.9. I learn by building, constantly exploring new technologies through hands-on projects and deep dives into code.
+                I’m a full stack development enthusiast and a 3rd-year Computer Science student at NSBM Green University
+                with a GPA of 3.9. I learn by building, constantly exploring new technologies through hands-on projects
+                and deep dives into code.
             </p>
             <div class="about-more-content">
                 <p>
-                    In 2024, I interned at Tecxick Software Solutions where I worked on two client projects that strengthened my technical skills and boosted my confidence in real-world collaboration.
+                    In 2024, I interned at Tecxick Software Solutions where I worked on two client projects that
+                    strengthened my technical skills and boosted my confidence in real-world collaboration.
                 </p>
                 <p>
-                    Beyond coding, I enjoy photography, watching TV shows, swimming, and spending time with my dog. I love solving problems, learning fast, and turning ideas into working products.
+                    Beyond coding, I enjoy photography, watching TV shows, swimming, and spending time with my dog. I
+                    love solving problems, learning fast, and turning ideas into working products.
                 </p>
             </div>
             <button class="btn-more-about">MORE ABOUT ME</button>
@@ -274,13 +299,15 @@
         <div class="connect-info-container">
             <h2 class="connect-title">LET'S CONNECT</h2>
             <p class="connect-description">
-                Say hello at <a href="mailto:esankithambawita@gmail.com" class="email-link">esankithambawita@gmail.com</a>
+                Say hello at <a href="mailto:esankithambawita@gmail.com"
+                    class="email-link">esankithambawita@gmail.com</a>
             </p>
             <p class="connect-description">
                 For more info, here's my <a href="#" class="resume-link">resume</a>
             </p>
             <div class="connect-social-icons">
-                <a href="https://www.linkedin.com/in/esanki-thambawita-350947256/" target="_blank" class="social-icon-link">
+                <a href="https://www.linkedin.com/in/esanki-thambawita-350947256/" target="_blank"
+                    class="social-icon-link">
                     <img src="https://skillicons.dev/icons?i=linkedin" alt="LinkedIn" class="social-icon-img">
                 </a>
                 <a href="https://github.com/EsankiThambawita" target="_blank" class="social-icon-link">
@@ -312,6 +339,7 @@
     </footer>
 
     <script src="script.js"></script>
-    
+
 </body>
+
 </html>
