Created the link to access my resume

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     class="email-link">esankithambawita@gmail.com</a>
             </p>
             <p class="connect-description">
-                For more info, here's my <a href="#" class="resume-link">resume</a>
+                For more info, here's my <a href="assets/Resume - Esanki Thambawita.pdf" download  class="resume-link">resume</a>
             </p>
             <div class="connect-social-icons">
                 <a href="https://www.linkedin.com/in/esanki-thambawita-350947256/" target="_blank"
