Added more tech icons

--- a/index.html
+++ b/index.html
@@ -266,6 +266,31 @@
                 <img src="https://skillicons.dev/icons?i=idea" alt="IntelliJ IDEA" class="tech-icon-img">
                 <span class="tech-name">IntelliJ</span>
             </div>
+            <div class="tech-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" alt="Redux" class="tech-icon-img" />
+                <span class="tech-name">Redux</span>
+            </div>
+            <div class="tech-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker" class="tech-icon-img" />
+                <span class="tech-name">Docker</span>
+            </div>
+            <div class="tech-item">
+                <img src="https://axios-http.com/assets/logo.svg" alt="Axios" class="tech-icon-img" style="background-color: white; border-radius: 0.3rem;" />
+                <span class="tech-name">Axios</span>
+            </div>
+            <div class="tech-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB" class="tech-icon-img" />
+                <span class="tech-name">MongoDB</span>
+            </div>
+            <div class="tech-item">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL" class="tech-icon-img" />
+                <span class="tech-name">PostgreSQL</span>
+            </div>
+            <div class="tech-item">
+                <img src="https://jwt.io/img/pic_logo.svg" alt="JWT" class="tech-icon-img" style="background-color: white; border-radius: 0.3rem;" />
+                <span class="tech-name">JWT</span>
+            </div>
+
         </div>
     </section>
 
