--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
       <div class="section-header">
         <h2 class="section-title">FEATURED PROJECTS</h2>
         <p class="section-description">
-          Here are some of the selected projects that showcase my passion for
-          full-stack development.
+          Here are some selected projects that showcase my passion for
+          full-stack development, where I bridge the gap between initial
+          requirements and final delivery through clear technical documentation
+          and organized project workflows.
         </p>
       </div>
 
@@ -472,7 +474,7 @@
       <h2 class="about-title">About Me</h2>
       <div class="about-content">
         <p class="about-intro">
-          I’m a full stack development enthusiast and a 3rd-year Computer
+          I’m a full stack development enthusiast and a final year Computer
           Science student at NSBM Green University with a GPA of 3.9. I learn by
           building, constantly exploring new technologies through hands-on
           projects and deep dives into code.
@@ -482,6 +484,13 @@
             In 2024, I interned at Tecxick Software Solutions where I worked on
             two client projects that strengthened my technical skills and
             boosted my confidence in real-world collaboration.
+          </p>
+          <p>
+            Building on that foundation, I completed a Frontend Developer
+            internship at AT Digital Pvt Ltd from October 2025 to April 2026,
+            where I successfully delivered around 8 client projects, further
+            refining my ability to translate complex requirements into clean,
+            well-documented, and user-focused solutions.
           </p>
           <p>
             Beyond coding, I enjoy photography, watching TV shows, swimming, and
